force-app/main/default/objects/Kudos_Settings__c/Kudos_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Kudos Settings</label>
</CustomObject>