force-app/main/default/objects/Kudos_Settings__c/fields/Can_Give_Kudos__c.field-meta.xml
<CustomField>
    <fullName>Can_Give_Kudos__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Give Kudos</label>
    <type>Checkbox</type>
</CustomField>