force-app/main/default/objects/Kudos_Settings__c/fields/Enable_Leaderboard__c.field-meta.xml
<CustomField>
    <fullName>Enable_Leaderboard__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Leaderboard</label>
    <type>Checkbox</type>
</CustomField>