force-app/main/default/objects/Kudos_Settings__c/fields/Max_Kudos_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Kudos_Per_Day__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Max Kudos Per Day</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>