force-app/main/default/objects/Kudos_Settings__c/fields/Notify_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Notify_Recipient__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notify Recipient</label>
    <type>Checkbox</type>
</CustomField>